--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,6 +9,6 @@
     <app-recipe-item 
     *ngFor="let recipeEl of recipes" 
     [recipe]="recipeEl" 
-    (recipeDetails)="showRecipeDetail(recipeEl)"></app-recipe-item>
+    ></app-recipe-item>
   </div>
 </div>
