--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<app-header (switch)="onNavigate($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="showRecipes === true"></app-recipes>
+      <!-- <app-recipes *ngIf="showRecipes === true"></app-recipes> -->
       <!-- <ng-template #shoppingList><app-shopping-list></app-shopping-list></ng-template> -->
-      <app-shopping-list *ngIf="showRecipes === false"></app-shopping-list>
+      <!-- <app-shopping-list *ngIf="showRecipes === false"></app-shopping-list> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
