--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,10 @@
-<a href="#" class="list-group-item clearfix" (click)="OnSelectRecipe()">
+<a 
+  style="cursor: pointer;" 
+  class="list-group-item clearfix" 
+  [routerLink]="[index]"
+  routerLinkActive="active"
+  >
+  <!-- (click)="OnSelectRecipe()" -->
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
