--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,14 +1,15 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (showRecipe)="recipe=$event"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-details 
+    <!-- <app-recipe-details 
       *ngIf="recipe;else infoText"
       [recipe]="recipe">
     </app-recipe-details>
     <ng-template #infoText>
       <p>Please select a recipe.</p>
-    </ng-template>
+    </ng-template> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
