--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a [routerLink]="['']" class="navbar-brand">Recipe Book</a>
+      <a [routerLink]="['/']" class="navbar-brand">Recipe Book</a>
     </div>
     <div class="nav-default">
       <ul class="nav navbar-nav">
